--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "h-learning-fe-admin"]
 	path = h-learning-fe-admin
 	url = git@github.com:duyhung2k4/h-learning-fe-admin.git
+[submodule "h-learning-mobile"]
+	path = h-learning-mobile
+	url = git@github.com:duyhung2k4/h-learning-mobile.git
