--- a/.gitmodules
+++ b/.gitmodules
@@ -7,17 +7,15 @@
 [submodule "h-learning-mobile"]
 	path = h-learning-mobile
 	url = git@github.com:duyhung2k4/h-learning-mobile.git
-
-
-# [submodule "h-learning-upload-mp4"]
-# 	path = service/cmd/upload-mp4-service
-# 	url = git@github.com:duyhung2k4/h-learning-upload-mp4.git
-# [submodule "h-learning-encoding-hls"]
-# 	path = service/cmd/encoding-service
-# 	url = git@github.com:duyhung2k4/h-learning-encoding-hls.git
-# [submodule "h-learning-video-hls"]
-# 	path = service/cmd/video-hls-service
-# 	url = git@github.com:duyhung2k4/h-learning-video-hls.git
-# [submodule "h-learning-core"]
-# 	path = service/cmd/core-service
-# 	url = git@github.com:duyhung2k4/h-learning-core.git
+[submodule "service/cmd/upload-mp4-service"]
+	path = service/cmd/upload-mp4-service
+	url = git@github.com:duyhung2k4/h-learning-upload-mp4.git
+[submodule "service/cmd/encoding-service"]
+	path = service/cmd/encoding-service
+	url = git@github.com:duyhung2k4/h-learning-encoding-hls.git
+[submodule "service/cmd/video-hls-service"]
+	path = service/cmd/video-hls-service
+	url = git@github.com:duyhung2k4/h-learning-video-hls.git
+[submodule "service/cmd/core-service"]
+	path = service/cmd/core-service
+	url = git@github.com:duyhung2k4/h-learning-core.git
