--- a/service/Makefile
+++ b/service/Makefile
@@ -9,12 +9,13 @@ video-hls:
 quizz:
 	go run cmd/quizz-service/main.go
 merge-blob:
-	go run cmd/merge-blob-service/main.go
+	go run cmd/merge-blob/main.go
 stream:
 	go run cmd/stream-service/main.go
 blob:
 	go run cmd/blob-service/main.go
-
+quantity:
+	go run cmd/quantity-blob-service/main.go
 # push mess to queue with quantity
 # job delete video
 all:
