--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "service/cmd/blob-service"]
 	path = service/cmd/blob-service
 	url = git@github.com:duyhung2k4/h-learning-blob-service.git
+[submodule "service/cmd/proxy-service"]
+	path = service/cmd/proxy-service
+	url = git@github.com:duyhung2k4/h-learning-proxy.git
