--- a/service/Dockerfile
+++ b/service/Dockerfile
@@ -2,9 +2,12 @@ FROM golang:1.22-alpine
 
 WORKDIR /app
 
-COPY cmd/core-service/ .
+COPY . .
+COPY cmd/merge-blob cmd/merge-blob
+
+# RUN apk update && apk add --no-cache ffmpeg
 
 RUN go mod tidy
-RUN go build -o main .
+RUN go build -o app cmd/merge-blob/main.go
 
-CMD ["./main"]
+CMD ["./app"]
