--- a/service/config/service.yml
+++ b/service/config/service.yml
@@ -1,75 +1,77 @@
 core_service:
-  host: localhost
+  host: 0.0.0.0
   port: 10000
   grpc: 9000
   socket: 8000
 
 upload_mp4_service:
-  host: localhost
+  host: 0.0.0.0
   port: 10001
   grpc: 9001
   socket: 8001
 
 encoding_service:
-  host: localhost
+  host: 0.0.0.0
   port: 10002
   grpc: 9002
   socket: 8002
 
 video_hls_service:
-  host: localhost
+  host: 0.0.0.0
   port: 10003
   grpc: 9003
   socket: 8003
 
 quizz_service:
-  host: localhost
+  host: 0.0.0.0
   port: 10004
   grpc: 9004
   socket: 8004
 
 blob_service:
-  host: localhost
+  host: 0.0.0.0
   port: 10005
   grpc: 9005
   socket: 8005
 
 stream_service:
-  host: localhost
+  host: 0.0.0.0
   port: 10006
   grpc: 9006
   socket: 8006
 
 merge_blob_service:
-  host: localhost
+  host: 0.0.0.0
   port: 10007
   grpc: 9007
   socket: 8007
 
 quantity_blob_service:
-  host: localhost
+  host: 0.0.0.0
   port: 10008
   grpc: 9008
   socket: 8008
 
 proxy_service:
-  host: localhost
+  host: 0.0.0.0
   port: 10009
   grpc: 9009
   socket: 8009
 
+public_ip: localhost
+
 psql:
   name: h_learning_core
   port: 5432
-  user: postgres
-  password: 123456
-  host: 192.168.0.103
+  user: root
+  password: duyhung2004
+  host: 54.254.201.253
 
-redis: localhost:6379
+redis: 13.215.252.200:6379
 
 queue_quantity: queue_mp4_360_p
 
-rabbitmq: amqp://guest:guest@localhost:5672/
+rabbitmq: amqp://ndhung:duyhung2004@54.179.173.170:5672/
 
 smpt:
   email: abangudot@gmail.com
