--- a/service/config/service.yml
+++ b/service/config/service.yml
@@ -63,15 +63,15 @@ public_ip: localhost
 psql:
   name: h_learning_core
   port: 5432
-  user: root
-  password: duyhung2004
-  host: 54.254.201.253
+  user: postgres
+  password: 123456
+  host: 192.168.1.2
 
-redis: 13.215.252.200:6379
+redis: 192.168.1.2:6379
 
 queue_quantity: queue_mp4_360_p
 
-rabbitmq: amqp://ndhung:duyhung2004@54.179.173.170:5672/
+rabbitmq: amqp://ndhung:duyhung2004@localhost:5672/
 
 smpt:
   email: abangudot@gmail.com
