--- a/service/config/service.yml
+++ b/service/config/service.yml
@@ -64,14 +64,14 @@ psql:
   name: h_learning_core
   port: 5432
   user: postgres
-  password: duyhung2004
-  host: 54.169.75.211
+  password: 123456
+  host: 192.168.0.104
 
-redis: 18.141.143.165:6379
+redis: localhost:6379
 
 queue_quantity: queue_mp4_360_p
 
-rabbitmq: amqp://ndhung:duyhung2004@18.141.139.140:5672/
+rabbitmq: amqp://ndhung:duyhung2004@localhost:5672/
 
 smpt:
   email: abangudot@gmail.com
