--- a/service/config/service.yml
+++ b/service/config/service.yml
@@ -65,13 +65,13 @@ psql:
   port: 5432
   user: postgres
   password: 123456
-  host: 192.168.0.100
+  host: 54.179.57.86
 
-redis: localhost:6379
+redis: 54.179.57.86:6379
 
 queue_quantity: queue_mp4_360_p
 
-rabbitmq: amqp://ndhung:duyhung2004@localhost:5672/
+rabbitmq: amqp://ndhung:duyhung2004@54.179.57.86:5672/
 
 smpt:
   email: abangudot@gmail.com
